# gigachat_api

./: .env.example  .gitignore  Dockerfile.gigachat_api  Dockerfile.gigachat_api.prod  main.py  pyproject.toml  pytest.ini  requirements.txt
gigachatAPI/: answer_questions.py  generate_test.py
gigachatAPI/chromadb/: chromadb_handler.py  vectordb_manager.py
gigachatAPI/config_data/: config.py  config_data.py
gigachatAPI/data/DATAPK_ITM_VERSION_1_7/datapk-itm-1.7/: ITM_design_and_implementation.ditamap  itm_k_admin_pdf.ditamap  itm_vm_admin_pdf.ditamap  udv_itm_m_main.dita  udv_itm_vm_main.dita
gigachatAPI/data/DATAPK_ITM_VERSION_1_7/datapk-itm-1.7/template_ITM/: html.css
gigachatAPI/data/DATAPK_ITM_VERSION_1_7/datapk-itm-1.7/topics/: test.dita
gigachatAPI/data/DATAPK_ITM_VERSION_1_7/datapk-itm-1.7/udv_template/: itm_template.css
gigachatAPI/data/chroma/DATAPK_VERSION_2_1/8fb58433-58c3-412b-b3eb-4d606e429497/: index_metadata.pickle
gigachatAPI/data/chroma/c30bd1fa-502e-4692-bf8f-2f5ddb93b5b4/: index_metadata.pickle
gigachatAPI/data/chroma/new_datapk1000/1436e1a6-7ddc-49c9-8bee-1f2c46ec1a33/: index_metadata.pickle
gigachatAPI/data/chroma/new_datapk800/b7397661-41ac-4926-b275-e594c7d7b609/: index_metadata.pickle
gigachatAPI/data/initial_docs/DATAPK_ITM_VERSION_1_7/datapk-itm-1.7/: datapk_itm_a_pdf.ditamap  itm_a_main.ditamap  itm_a_pdf.ditamap  itm_k_certif_pdf.ditamap  itm_k_main_datapk.ditamap  itm_k_pdf.ditamap  itm_k_user_pdf.ditamap  main_datapk.ditamap  review.ditamap  tech_general_functions.dita  test.ditamap  udv_itm_k_user_pdf.ditamap  udv_itm_m_main.ditamap  udv_itm_rm_main.ditamap  udv_itm_vm_main.ditamap
gigachatAPI/data/new_datapk1000/datapk-itm-1.7/: itm_m_pdf.ditamap  itm_vm_user_pdf.ditamap  tech_general1.dita  udv_itm_vm_user_pdf.ditamap
gigachatAPI/data/new_datapk1000/datapk-itm-1.7/template_ITM/: ITM_pdf.opt
gigachatAPI/data/new_datapk1200/datapk-itm-1.7/: tech.ditamap  udv_itm_vm_admin_pdf.ditamap
gigachatAPI/data/new_datapk1500/datapk-itm-1.7/: UDV_ITM_design_and_implementation.ditamap  itm.xpr  itm_m_main.ditamap  main.ditamap  tech_license.dita  udv_itm_rm_main.dita
gigachatAPI/data/new_datapk800/datapk-itm-1.7/: tech_arch.dita  udv_itm_k_admin_pdf.ditamap
gigachatAPI/data/test_chroma/4d056e93-dcd9-4535-b497-5af116f32230/: index_metadata.pickle
gigachatAPI/data/test_system_docs/: DATAPK_ITM_VERSION_1_7.txt  DATAPK_VERSION_2_1.txt
gigachatAPI/logs/: logs.py
gigachatAPI/metrics/: meteor.py
gigachatAPI/metrics/rouge/: rouge_metrics.py
gigachatAPI/metrics/sentence_bleu/: bleu_config.py  sentence_bleu.py
gigachatAPI/process_files/: get_result_docs_list.py  process_paths.py  split_dita_docs.py  split_other_docs.py
gigachatAPI/prompts/: create_prompts.py
gigachatAPI/prompts/prompt_templates/: gen_que.py  gen_que_with_answ_prompt.yaml  qna_new.py
gigachatAPI/rag/: answer_questions.py  semantic_cache.py
gigachatAPI/sentence_bleu/: bleu_config.py  sentence_bleu.py
gigachatAPI/utils/: delete_doc.py  get_actual_docs.py  help_methods.py  output_parser.py
gigachatAPI/utils/path_to_doc/: path_to_doc.py  tf_idf_search.py
tests/: data_for_check.csv  data_for_check.py  test_main.py
(+1939 files in other folders)
