[tool.poetry]
name = "gigachat-api"
version = "0.1.0"
description = ""
authors = ["Kostya Pershin <kostya.pershin.18@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
asgiref = "3.8.1"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.3"
build = "1.2.1"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.5"
chromadb = "0.5.4"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
dataclasses-json = "0.6.6"
deprecated = "1.2.14"
dnspython = "2.6.1"
email-validator = "2.1.1"
environs = "11.0.0"
fastapi = "0.111.0"
fastapi-cli = "0.0.3"
filelock = "3.14.0"
flatbuffers = "24.3.25"
frozenlist = "1.4.1"
fsspec = "2024.3.1"
gigachain = "0.1.17"
gigachain-chroma = "^0.1.1"
gigachain-community = "0.0.36"
gigachain-core = "0.1.48"
gigachain-text-splitters = "0.0.1"
gigachat = "0.1.23"
google-auth = "2.29.0"
googleapis-common-protos = "1.63.0"
greenlet = "3.0.3"
grpcio = "1.63.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
huggingface-hub = "0.23.0"
humanfriendly = "10.0"
idna = "3.7"
importlib-metadata = "7.0.0"
importlib-resources = "6.4.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
kubernetes = "29.0.0"
langsmith = "0.1.57"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.2"
mdurl = "0.1.2"
mmh3 = "4.1.0"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
nltk = "3.8.1"
numpy = "1.26.4"
oauthlib = "3.2.2"
onnxruntime = "1.17.3"
opentelemetry-api = "1.24.0"
opentelemetry-exporter-otlp-proto-common = "1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "1.24.0"
opentelemetry-instrumentation = "0.45b0"
opentelemetry-instrumentation-asgi = "0.45b0"
opentelemetry-instrumentation-fastapi = "0.45b0"
opentelemetry-proto = "1.24.0"
opentelemetry-sdk = "1.24.0"
opentelemetry-semantic-conventions = "0.45b0"
opentelemetry-util-http = "0.45b0"
orjson = "3.10.3"
overrides = "7.7.0"
packaging = "23.2"
posthog = "3.5.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pygments = "2.18.0"
pypika = "0.48.9"
pyproject-hooks = "1.1.0"
pyreadline3 = "3.4.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
regex = "2024.5.10"
requests = "2.31.0"
requests-oauthlib = "2.0.0"
rich = "13.7.1"
rsa = "4.9"
scikit-learn = "1.4.2"
scipy = "1.13.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.30"
starlette = "0.37.2"
sympy = "1.12"
tenacity = "8.3.0"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
tqdm = "4.66.4"
typer = "0.12.3"
typing-inspect = "0.9.0"
typing-extensions = "4.11.0"
ujson = "5.9.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
watchfiles = "0.21.0"
websocket-client = "1.8.0"
websockets = "12.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zipp = "3.18.1"
spacy = "^3.8.0"
redisvl = "^0.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"